--- a/src/anchor/anchor-target.ipynb
+++ b/src/anchor/anchor-target.ipynb
@@ -508,13 +508,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- `cls_pred` threshold, nms가 모두 고려되었다고 가정하고 위에서 얻은 `pos_delta_pred`를 test 결과로 얻었다고 가정하겠습니다."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -585,22 +578,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reference\n",
+    "---\n",
+    "## Conclusion\n",
+    "이번 글을 통해 object detection에서 anchor의 사용 목적과 구현 방법에 대해서 살펴보았습니다. <br>\n",
+    "다음 글에서는 잠깐 언급한 바 있는, anchor에 positive, negative label을 assign하고 학습에 사용할 sample을 뽑는 과정에 대해 살펴보겠습니다.\n",
+    "<br> <br>\n",
     "\n",
     "---\n",
-    "### Faster R-CNN\n",
-    "**[1]** Translation-Invariant Anchors\n",
+    "## Reference\n",
+    "\n",
+    "#### Faster R-CNN\n",
+    "[arXiv:1506.01497[cs.CV]](https://arxiv.org/abs/1506.01497)\n",
+    "\n",
+    "<a id=\"ref_2\"></a>\n",
+    "**[2]** Translation-Invariant Anchors\n",
     "     An important property of our approach is that it is translation invariant, both in terms of the anchors and the functions that compute proposals relative to the anchors.\n",
     "     If one translates an object in an image, the proposal should translate and the same function should be able to predict the proposal in either location.\n",
     "\n",
-    "**[2]** Multi-Scale Anchors as Regression References\n",
+    "<a id=\"ref_3\"></a>\n",
+    "**[3]** Multi-Scale Anchors as Regression References\n",
     "     Our design of anchors presents a novel scheme for addressing multiple scales (and aspect ratios).\n",
     "     The second way is to use sliding windows of multiple scales (and/or aspect ratios) on the feature maps.\n",
     "\n",
-    "**[3]** For denser scale coverage than in Faster-RCNN, at each level we add anchors of sizes $\\{2^0,2^{\\frac 1 3}, 2^{\\frac 2 3}\\}$ of the original set of $3$ aspect ratio anchors.\n",
-    "     This improve AP in our setting. In total there are $A = 9$ anchors per level and across levels they cover the scale range $32 - 813$ pixels with respect to the network’s input image.\n",
-    "\n",
-    "**[4]** For training RPNs, we assign a binary class label (of being an object or not) to each anchor.\n",
+    "<a id=\"ref_5\"></a>\n",
+    "**[5]** For training RPNs, we assign a binary class label (of being an object or not) to each anchor.\n",
     "     We assign a positive label to two kinds of anchors:\n",
     "     (i) the anchor/anchors with the highest Intersection-overUnion (IoU) overlap with a ground-truth box, or\n",
     "     (ii) an anchor that has an IoU overlap higher than $0.7$ with any ground-truth box.\n",
@@ -608,23 +609,29 @@
     "     We assign a negative label to a non-positive anchor if its IoU ratio is lower than $0.3$ for all ground-truth boxes.\n",
     "     Anchors that are neither positive nor negative do not contribute to the training objective.\n",
     "\n",
-    "**[5]** For bounding box regression, we adopt the parameterizations of the 4 coordinates following: \n",
+    "<a id=\"ref_6\"></a>\n",
+    "**[6]** For bounding box regression, we adopt the parameterizations of the 4 coordinates following:\n",
     "$$ t_x = (x - x_a) / w_a,\\ t_y = (y - y_a) / h_a, \\\\\n",
-    "   t_w = \\log(w / w_a),\\ t_h = \\log(h / h_a), \\\\\n",
+    "   \\ t_w = \\log(w / w_a),\\ t_h = \\log(h / h_a), \\\\\\\\\\\\\n",
     "   t_x^{\\ast} = (x^{\\ast} - x_a) / w_a,\\ t_y^{\\ast} = (y^{\\ast} - y_a) / h_a, \\\\\n",
-    "   t_w^{\\ast} = \\log(w^{\\ast} / w_a),\\ t_h^{\\ast} = \\log(h^{\\ast} / h_a) $$\n",
-    "   \n",
-    "**[6]** It is possible to optimize for the loss functions of all anchors, but this will bias towards negative samples as they are dominate.\n",
+    "   \\ t_w^{\\ast} = \\log(w^{\\ast} / w_a),\\ t_h^{\\ast} = \\log(h^{\\ast} / h_a) $$\n",
+    "\n",
+    "<a id=\"ref_7\"></a>\n",
+    "**[7]** It is possible to optimize for the loss functions of all anchors, but this will bias towards negative samples as they are dominate.\n",
     "     Instead, we randomly sample $256$ anchors in an image to compute the loss function of a mini-batch, where the sampled positive and negative anchors have a ratio of up to $1:1$.\n",
     "\n",
     "### RetinaNet\n",
-    "**[7]** The design of our RetinaNet detector shares many similarities with previous dense detectors, in particular the concept of 'anchors' introduced by RPN and use of features pyramids as in SSD and FPN. \n",
+    "[arXiv:1708.02002[cs.CV]](https://arxiv.org/abs/1708.02002)\n",
     "\n",
-    "**[8]** We use translation-invariant anchor boxes similar to those in the RPN variant. The anchors have areas of $32^2$ to $512^2$ on pyramid levels $P_3$ to $P_7$, respectively. at each pyramid level we use anchors at three aspect ratios $\\{1:2, 1:1, 2:1\\}$. For denser scale coverage, at each level we add anchors of sizes $\\{2^0, 2^{1/3}, 2^{2/3}\\}$ of the original set of 3 aspect ratio anchors. This improve AP in our setting. In total there are $A=9$ anchors per level and across levels they cover the scale range $32-813$ pixels with respect to the network's input image. Each anchor is assigned a length $K$ one-hot vector of classification targets, where $K$ is the number of object classes, and a $4$-vector of box regression targets. We use the assignment rule from RPN but modified for multi-class detection and with adjusted thresholds. Specifically, anchors are assigned to ground-truth object boxes using an intersection-over-union(IoU) threshold of $0.5$; and to background if their IoU is in $[0, 0.4)$. As each anchor is assigned to at most one object box, we set the corresponding entry in its length $K$ label vector to $1$ and all other entries to $0$. If an anchor is unassigned, which may happen with overlap in $[0.4, 0.5)$, it is ignored during training. Box regression targets are computed as the offset between each anchor and its assigned object box, or omitted if there is no assignment.\n",
+    "<a id=\"ref_1\"></a>\n",
+    "**[1]** The design of our RetinaNet detector shares many similarities with previous dense detectors, in particular the concept of 'anchors' introduced by RPN and use of features pyramids as in SSD and FPN.\n",
     "\n",
-    "**[9]** The classification subnet predicts the probability of object presence at each spatial position for each of the $A$ anchors and $K$ object classes.\n",
+    "<a id=\"ref_4\"></a>\n",
+    "**[4]** We use translation-invariant anchor boxes similar to those in the RPN variant. The anchors have areas of $32^2$ to $512^2$ on pyramid levels $P_3$ to $P_7$, respectively. at each pyramid level we use anchors at three aspect ratios $\\{1:2, 1:1, 2:1\\}$. For denser scale coverage, at each level we add anchors of sizes $\\{2^0,2^{\\frac 1 3}, 2^{\\frac 2 3}\\}$ of the original set of 3 aspect ratio anchors. This improve AP in our setting. In total there are $A=9$ anchors per level and across levels they cover the scale range $32-813$ pixels with respect to the network's input image. Each anchor is assigned a length $K$ one-hot vector of classification targets, where $K$ is the number of object classes, and a $4$-vector of box regression targets. We use the assignment rule from RPN but modified for multi-class detection and with adjusted thresholds. Specifically, anchors are assigned to ground-truth object boxes using an intersection-over-union(IoU) threshold of $0.5$; and to background if their IoU is in $[0, 0.4)$. As each anchor is assigned to at most one object box, we set the corresponding entry in its length $K$ label vector to $1$ and all other entries to $0$. If an anchor is unassigned, which may happen with overlap in $[0.4, 0.5)$, it is ignored during training. Box regression targets are computed as the offset between each anchor and its assigned object box, or omitted if there is no assignment.\n",
     "\n",
-    "**[10]** In parallel with the object classification subnet, we attach another small FCN to each pyramid level for the purpose of regressing the offset from each anchor box to a nearby ground-truth object, if one exists. For each of the $A$ anchors per spatial location, these $4$ outputs predict the relative offset between the anchor and the ground-truth box."
+    "**[8]** The classification subnet predicts the probability of object presence at each spatial position for each of the $A$ anchors and $K$ object classes.\n",
+    "\n",
+    "**[9]** In parallel with the object classification subnet, we attach another small FCN to each pyramid level for the purpose of regressing the offset from each anchor box to a nearby ground-truth object, if one exists. For each of the $A$ anchors per spatial location, these $4$ outputs predict the relative offset between the anchor and the ground-truth box."
    ]
   }
  ],
